@@ -15,9 +15,9 @@
 
 <h2>Display "LISTITEM"</h2>
 <p>This template is used for a list of all persons of your staff.</p>
+<p>You can now use all markers that are used in the detail view. But notice: You need to rename the wrappers to work in the listview! In the detailed view the wrappers are named like <strong>###FIELD_WRAPPER_XYZ###</strong>, to use them in the list view, simply rename them to <strong>###LISTITEM_WRAPPER_XYZ###</strong></p>
 
 
- 
 <!-- ###LIST_ITEM### -->
 <tr class="###CLASS###">
 		<td class="left">
