@@ -1,4 +1,5 @@
 version 0.2.0 - currently working on
+- Fixed: Missing generation of markers in the list view (#40)
 - Removed the old template file from the CVS Repository (#199)
 - Added feature to show the persons age instead of the birthdate (#198)
 - Fixed a bug with repeated team leaders shown in teamlist (#190)
